Attempt to fix z-index (Safari Bug) (2 - unsaved changes)

--- a/client/src/styles/_App.scss
+++ b/client/src/styles/_App.scss
@@ -18,9 +18,9 @@ body {
 
     /* =============== Modifiers =============== */
     // State
-    // &--is-active {
-    //   @include transform(translateY($navbar3d-height));
-    // }
+    &--is-active {
+      @include transform(translateY($navbar3d-height));
+    }
     /* =============== End =============== */
   }
 }
